# uv-playground

./: README.md  requirements.txt
.github/workflows/: pip.yml  uv.yml
issues/url_deps/: README.md  requirements.txt  test_packages.py
issues/url_deps/packageA/: pyproject.toml
issues/url_deps/packageA/src/: __init__.py
issues/url_deps/packageB/: pyproject.toml
issues/url_deps/packageB/src/: __init__.py
