[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "packageA"
dynamic = ["version"]
authors = [
    {name = "Alice Biometrics", email = "dev@alicebiometrics.com"},
]
description = "Package A"
requires-python = ">=3.10"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
dependencies = [
    "packageB @ git+https://@github.com/alice-biometrics/uv-playground@main#egg=src&subdirectory=issues/url_deps/packageB"
]

[tool.setuptools.dynamic]
version = {file = "src/VERSION"}